# x-client

./: .gitignore  Cargo.toml  README.md  RECON.md  justfile  rust-toolchain.toml
src/: api.rs  archive.rs  catalog.rs  client.rs  config.rs  features.rs  lib.rs  main.rs  media.rs  news.rs  output.rs  parse.rs  runtime_query_ids.rs  session.rs  store.rs
ts/: .npmrc  index.test.ts  package.json  tsconfig.json
ts/src/: index.ts
ts/src/config/: catalog.ts  query-ids.ts  x-graphql-catalog.json
ts/src/core/: client.ts  features.ts  parse.ts  schemas.ts  session.ts
ts/src/db/: archive.ts  ingest.ts  store.ts
ts/src/services/: crawler.ts  cron.ts  media.ts  news.ts  rag.ts
